Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- External method to replay meta_profiles
- adding the possibility to upload a zip archive of images directly in a
  gallery
- meta factory sets initial versions of upgrade categories
  at site creation time
- added a back button on the user_logged_in_failed.pt template
- #1702: Added new Catalan translation thanks to Santi Camps.
Bug fixes:
~~~~~~~~~~
- The title and post url in metafactory used to be non configurable
- Missing workflow_unpublish event for Content Portlet cache invalidation
- Made the Localizer import step clear the portlets tool cache so that messages
  are well translated when a new language is added.
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-