@@ -1,11 +1,12 @@
-##parameters=lr_block=None, lr_unblock=None, filtered_role=None, REQUEST=None
+##parameters=lr_block=None, lr_unblock=None, filtered_role=None, show_blocked_roles=0, REQUEST=None
 # $Id$
 """
 Block/unblock local roles
 
 If lr_block is not None, block local roles, elif lr_unblock is not None,
 unblock them.
-filtered_role parameter is only passed to be kept while blocking/unblocking.
+filtered_role and show_blocked_roles parameters are only passed to be kept
+while blocking/unblocking.
 """
 
 from Products.CMFCore.utils import getToolByName
@@ -23,6 +24,7 @@ elif lr_unblock is not None:
 if REQUEST is not None:
     kwargs = {
         'filtered_role': filtered_role,
+        'show_blocked_roles': show_blocked_roles,
         'portal_status_message': psm,
         }
     REQUEST.RESPONSE.redirect('%s/folder_localrole_form?%s'%(
