@@ -743,6 +743,15 @@ span.inheritedRole {
   background: <dtml-var inheritedRole>;
 }
 
+table.localRolesAssignment td.inheritedBlockedRole {
+  text-align: center;
+  background: <dtml-var inheritedBlockedRole>;
+}
+
+span.inheritedBlockedRole {
+  background: <dtml-var inheritedBlockedRole>;
+}
+
 <dtml-comment>
 DIVs ------------------------------
 </dtml-comment>
