@@ -156,3 +156,4 @@ atomColor:string=#ffffff
 atomFont:string=bold 70% 'Lucida Grande', Verdana, Geneva, Lucida, Arial, Helvetica, sans-serif
 
 inheritedRole:string=#ffff99
+inheritedBlockedRole:string=#ff9999
