@@ -9,6 +9,7 @@ New features:
 - meta factory sets initial versions of upgrade categories
   at site creation time
 - added a back button on the user_logged_in_failed.pt template
+- #923: put back "show blocked roles" feature
 - #1702: Added new Catalan translation thanks to Santi Camps.
 Bug fixes:
 ~~~~~~~~~~
